--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -1,9 +1,12 @@
+@use '../../styles/vars';
+
 .app {
-  width: 500px;
-  margin: 1em auto;
-  text-align: center;
+  width: 100%;
+  background-color: vars.$mainBgColor;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.app img {
-  max-width: 150px;
-}
+
