--- a/src/components/Characters/characters.scss
+++ b/src/components/Characters/characters.scss
@@ -32,18 +32,20 @@
     display: flex;
     flex-direction:row;
     align-items: center;
+    height: 80px;
+    border-bottom: 1px solid vars.$underline-color ;
 
     .characters-img{
-      width: 50px;
-      height: 50px;
+      width: 65px;
+      height: 65px;
       border-radius: 50%;
       border: 1px solid black;
+      margin: 0 10px;
 
     }
     .characters-li{
       width: 100%;
       height: 60px;
-      border-bottom: 1px solid vars.$underline-color ;
       padding: 20px;
       cursor:pointer;
     }
