--- a/src/components/Characters/characters.scss
+++ b/src/components/Characters/characters.scss
@@ -22,7 +22,7 @@
   }
   &-ul{
     width: 100%;
-    max-height: 250px ;
+    height: 250px ;
     overflow-y: auto;
     background-color: vars.$thirdBgColor;
     border-radius: 10px;
