--- a/src/components/Characters/characters.scss
+++ b/src/components/Characters/characters.scss
@@ -34,6 +34,7 @@
     align-items: center;
     height: 80px;
     border-bottom: 1px solid vars.$underline-color ;
+    object-fit: cover;
 
     .characters-img{
       width: 65px;
