--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -2,7 +2,7 @@
 
 .app {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: vars.$mainBgColor;
   padding: 20px;
   display: flex;
