--- a/src/components/Characters/characters.scss
+++ b/src/components/Characters/characters.scss
@@ -1,12 +1,13 @@
 @use '../../styles/vars';
 
 .characters{
-  width: 350px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   &-input{
     width: 100%;
+    max-width: 300px;
     height: 30px;
     margin-bottom: 5px;
     border-radius: 10px;
@@ -22,6 +23,7 @@
   }
   &-ul{
     width: 100%;
+    max-width: 300px;
     height: 250px ;
     overflow-y: auto;
     background-color: vars.$thirdBgColor;
