--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,6 +1,12 @@
 @use '../../styles/vars';
 
+.header-h1{
+  margin: 0 auto;
+  width: 100%;
+}
+
 .header-img{
-  max-width: 350px;
-  margin: 0 0 40px 0;  
+  margin: 0 auto 40px auto;
+  width: 100%;
+  max-width: 350px;  
 }
